--- a/iiot/app_web/shop- takeapart/css/standard-flow.css
+++ b/iiot/app_web/shop- takeapart/css/standard-flow.css
@@ -136,7 +136,7 @@ select{ appearance:none;  -moz-appearance:none;  -webkit-appearance:none;  -ms-a
 .shopping_cart{ max-width: 1000px !important; margin: 0 auto; }
 .shopping_cart h3.top_title{ text-align: center; padding: 15px 0; font-size: 18px; font-weight: bold; }
 .shopping_cart h3.top_title span{ font-size: 14px; color: #888;  display: block; font-weight: normal; padding-top: 5px;}
-.shopping_cart h4.store_name{ text-align: center; padding: 5px 15px; font-size: 15px; color: #e85718; font-weight: bold; }
+.shopping_cart h4.store_name{ text-align: center; padding: 5px 15px; font-size: 14px; color: #e85718; font-weight: bold; }
 
 .shopping_cart p.quantity_products{text-align: center; padding-bottom: 20px; font-size: 14px; line-height: 28px; color: #666666; }
 .shopping_cart p.quantity_products span{ color: #fe4513; padding: 0 5px; font-size: 18px;}
@@ -178,21 +178,20 @@ ul.shopping_car_list .car_delete a:hover{ color: #e85718; }
 .shopping_cart input.btn{ margin: 0 auto; text-align: center; font-size: 17px; background-color: #ff8a00; height: 50px; line-height: 50px; color: #fff; display:block; min-width: 186px; cursor: pointer; border-radius: 50px; }
 .shopping_cart ul.day-select{ width: 100%; background-color: #f0f0f0; padding: 12px; }
 .shopping_cart ul.day-select li{ position: relative; max-width: 328px; margin: 8px auto; background-color: #fff; border-radius: 50px; padding: 8px; }
-.shopping_cart label{ font-size: 15px; font-family:'Noto Sans TC',Arial,"微軟正黑體","新細明體", sans-serif; color: #676767;}
 .shopping_cart form{ padding-bottom: 30px;}
 
 .shopping_cart p.sub_title{ text-align: center; font-weight: bold; color: #666; font-size: 14px; text-align: center; padding-top: 10px; }
 
-.shopping_cart ul.fillin{ max-width: 500px; padding-bottom: 15px; margin: 0 auto;}
-.shopping_cart label{ width: 100%; display: block; font-size: 13.5px; color: #828282; padding:15px 0 5px 20px; }
-.shopping_cart input{ width: 100%; border: 1px solid #fff; padding: 0 18px; margin: 0 auto; font-size: 15px; border-radius: 50px; height: 40px; background-color: #f0f0f0; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;}
+.shopping_cart ul.fillin{ max-width: 500px; padding-bottom: 10px; margin: 0 auto;}
+.shopping_cart label{ font-size: 15px; font-family:'Noto Sans TC',Arial,"微軟正黑體","新細明體", sans-serif; color: #676767; width: 100%; display: block; font-size: 13.5px; color: #828282; padding:10px 0 5px 20px; }
+.shopping_cart input{ width: 100%; border: 1px solid #fff; padding: 0 18px; margin: 0 auto; font-size: 14px; border-radius: 50px; height: 36px; background-color: #f0f0f0; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;}
 .shopping_cart input::placeholder{ color: #a9a9a9; font-size: 13px; }
-.shopping_cart textarea{ width: 100%; border: 1px solid #fff; padding: 15px 18px; min-height: 80px; line-height: 28px; margin: 0 auto; font-size: 15px; border-radius: 15px; background-color: #f0f0f0;}
+.shopping_cart textarea{ width: 100%; border: 1px solid #fff; padding: 10px 18px; min-height: 64px; line-height: 24px; margin: 0 auto; font-size: 14px; border-radius: 15px; background-color: #f0f0f0;}
 .shopping_cart ::-webkit-input-placeholder, .shopping_cart input::-moz-placeholder, .shopping_cart input::-moz-placeholder, .shopping_cart:-ms-input-placeholder{color: red;}
 .shopping_cart input:focus{ border-color: #ff8a00; }
 
 .shopping_cart ul.fillin li span.org{ color: #e85718; padding-right: 3px;}
-.shopping_cart ul.fillin li.the_invoice{ padding: 10px 0; }
+.shopping_cart ul.fillin li.the_invoice{ padding: 5px 0; }
 .shopping_cart ul.fillin li.the_invoice h4{ font-size: 13.5px; color: #828282; padding:10px 0 10px 20px; }
 .shopping_cart ul.fillin li.the_invoice div{ position: relative; padding: 3px 0;}
 .shopping_cart ul.fillin li.the_invoice label{ font-size: 13.5px; font-weight: bold; color: #333; padding: 0; padding-left: 30px; }
@@ -222,7 +221,7 @@ p.error i{ padding-right: 5px; }
 
 /*變圓角在input內*/
 .shopping_cart ul.fillin li .phone_verification2{ position: relative; }
-.shopping_cart ul.fillin li .phone_verification2 .btn_yello{ position: absolute; top: 2px; right:8px; border-radius: 20px; line-height: 24px;}
+.shopping_cart ul.fillin li .phone_verification2 .btn_yello{ position: absolute; top: 0px; right:8px; border-radius: 20px; line-height: 24px;}
 /*變圓角在input內 END*/
 
 .shopping_cart ul.the_btn{ width: 100%; max-width: 800px;  padding: 15px  0; text-align: center; margin: 0 auto;}
@@ -277,17 +276,17 @@ p.error i{ padding-right: 5px; }
 .order_list .car_name p.product_name{ text-align:left; padding: 5px; width: 100%;}
 .order_list .car_nb{ width: 80px; }
 
-ul.order_list_done{ width: 100%; margin: 0 auto; max-width: 500px; padding: 15px 0;}
-ul.order_list_done li{padding: 7px 0; border-bottom: 1px solid #f5f5f5;}
+ul.order_list_done{ width: 100%; margin: 0 auto; max-width: 500px; padding: 10px 0;}
+ul.order_list_done li{padding: 6px 0; border-bottom: 1px solid #f5f5f5;}
 ul.order_list_done li p{ font-size: 14px; line-height: 20px; }
 ul.order_list_done li span{ float: left; letter-spacing: 1px; }
 ul.order_list_done li span.l_t{ width: 90px; text-align: left; padding-left: 15px; color: #555;}
 ul.order_list_done li span.r_info{ width:calc(100% - 90px); }
-ul.order_list_done li.bottom_line{ border-bottom: 1px dashed #a2a2a2; padding-bottom: 15px; margin-bottom: 15px;}
+ul.order_list_done li.bottom_line{ border-bottom: 1px dashed #a2a2a2; padding-bottom: 8px; margin-bottom: 12px;}
 ul.order_list_done li.buy_list span.l_t{ width:calc(100% - 120px); text-align: left; color: #333; padding-left: 15px;}
 ul.order_list_done li.buy_list span.r_nb{ width:120px; text-align: right; padding-right: 15px;}
 ul.order_list_done li.width_f{ border: none; }
-ul.order_list_done li.width_f p{ text-align: center; padding: 10px 0; font-size: 16px; color: #e85718; font-weight: bold; background-color: #fff7f7; border-radius: 10px;}
+ul.order_list_done li.width_f p{ text-align: center; padding: 10px 0; font-size: 15px; color: #e85718; font-weight: bold; background-color: #fff7f7; border-radius: 10px;}
 ul.order_list_done li p.s_f{ font-size: 12px; color: #666; padding-left: 15px; }
 
 @media screen and (-ms-high-contrast: active),(-ms-high-contrast: none){
@@ -310,7 +309,6 @@ ul.order_list_done li p.s_f{ font-size: 12px; color: #666; padding-left: 15px; }
 }
 @media (max-width:800px){
 	.shop_mainbox .top_step ul li p{ font-size: 15px; }
-	.shop_mainbox .top_step ul li p span{ display: block; }
 }
 @media (max-width:750px){
 	.fadebox h3.top_title{ font-size: 17px; }
@@ -387,7 +385,7 @@ ul.order_list_done li p.s_f{ font-size: 12px; color: #666; padding-left: 15px; }
 	.shopping_cart h3.top_title{ font-size: 16px; }
 	.shopping_cart p.quantity_products{ font-size: 12px; }
 	.shopping_cart p.quantity_products span{ font-size: 14px; }
-	ul.order_list_done li p, .order_list p, .shopping_cart ul.fillin li.the_invoice label{ font-size: 13px; }
+	ul.order_list_done li p, .order_list p, .shopping_cart ul.fillin li.the_invoice label, .shopping_order .order_list p{ font-size: 13px; }
 }
 @media screen and (max-height: 450px) {
 }
