--- a/jetfi_wifi/css/style.css
+++ b/jetfi_wifi/css/style.css
@@ -28,11 +28,28 @@ select{ appearance:none; -moz-appearance:none; -webkit-appearance:none; -ms-appe
 /*===== start ======*/
 body{ background-color: #f4f4f4;}
 .header_container{ width: 100%; position: fixed; top: 0; left: 0; background-color: #fff; min-height: 65px; z-index: 2; border-bottom: 1px solid #e0e0e0; }
-.header_container a.header_jetfi_logo{ width: 120px; height: 54px; display: block; text-indent: -9999px; background: url(https://jetfi-saas.wifiotg.com/img/logo.bca961c2.png) center center no-repeat; background-size: contain; }
+.header_container .header_nav{ float: right; }
+.header_container .header_nav ul{ text-align: left; padding-top: 2px;}
+.header_container .header_nav ul li{ display: inline-block; }
+.header_container .header_nav ul li a{position: relative; padding:15px 30px 15px 10px; display: block; cursor: pointer;}
+.header_container .header_nav ul li p.choose{ font-size:14px; position: relative; line-height: 20px;}
+.header_container .header_nav ul li p.choose::after{ content: ""; position: absolute; top:4px ; right: -24px; width: 20px; height: 9px; display: block; background: url("../images/svg/arrow-down-sign-to-navigate.svg") center center no-repeat; background-size: contain;} 
+.header_container .header_nav ul li:hover p.choose{ opacity: .7;}
+
+.header_container .header_nav ul li .sub_item{ position: absolute; display: none; top: 45px; right: 0; background-color: #fff; border-radius: 6px; min-width: 110px; box-shadow: 0 3px 10px rgba(0,0,0,.2);}
+.header_container .header_nav ul li .sub_list{ position: relative;}
+.header_container .header_nav ul li .sub_list::after{ content: ""; position: absolute; top: -8px; right: 9px; width: 0; height: 0; border-style: solid; border-width: 0 7.5px 8px 7.5px; border-color: transparent transparent #ffffff transparent; z-index: 3; line-height: 0px; _border-color: #000000 #000000 #ffffff #000000; _filter: progid:DXImageTransform.Microsoft.Chroma(color='#000000');}
+.header_container .header_nav ul li .sub_list::before{ content: ""; position: absolute; top: -10px; right: 8px; width: 0; height: 0; border-style: solid; border-width: 0 8.5px 8.5px 8.5px; border-color: transparent transparent #eeeeee transparent; z-index: 2;}
+.header_container .header_nav ul li .sub_list p{ font-size: 13px; padding:10px 6px; line-height: 18px; text-align: center; border-bottom: 1px solid #e0e0e0;}
+.header_container .header_nav ul li .sub_list p:hover{ color: #ff5722; }
+.header_container .header_nav ul li .sub_list p:last-child{ border: none; }
+
+.header_container a.header_jetfi_logo{ width: 120px; height: 54px; float: left; display: block; text-indent: -9999px; background: url(https://jetfi-saas.wifiotg.com/img/logo.bca961c2.png) center center no-repeat; background-size: contain; }
 .header_container .header_content { max-width: 1200px; width: 100%; margin: 0 auto; padding: 5px 20px; }
 
 .main_container{ width: 100%; margin: 0 auto; padding-top: 60px;}
 .main_container h3.top_title{ padding:10px 0 35px 0; font-size: 24px; font-weight: bold; color: #222; text-align: center; }
+.main_container h4.sub_title{ font-size: 18px; font-weight: bold; color: #ff9800; text-align: center; }
 
 .main_container .main_flexslider{ width: 100%; height: 400px; position: relative; overflow: hidden;}
 .main_container .main_flexslider ul.slides li{ height: 400px; background-position: center center; background-repeat: no-repeat; background-size: cover;position: relative;}
@@ -69,21 +86,93 @@ body{ background-color: #f4f4f4;}
 .main_container .area_content ul.country_list li img{ width: 100%; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; }
 .main_container .area_content ul.country_list li img:hover{ box-shadow: 2px 5px 15px rgba(0,0,0,.4); }
 
+.main_container .plan_content{ width:calc( 100% - 40px); max-width: 1200px; padding: 40px 0; margin: 0 auto; }
+.main_container .plan_content h3{ padding-bottom: 15px; }
+.main_container .wifi_router_info{ width: 100%; max-width: 800px; margin: 0 auto; padding: 30px 0;}
+.main_container .wifi_router_info .img_wifi_router{ float: left; width:300px; padding-right: 40px; }
+.main_container .wifi_router_info .img_wifi_router img{ width: 100%; border-radius: 50%; box-shadow: 0 3px 8px rgba(0,0,0,0.1); }
+
+.main_container .wifi_router_info .other_item{ float: left; width:calc(100% - 300px);}
+.main_container .wifi_router_info ul.specification{ padding: 20px 0; display: inline-block; }
+.main_container .wifi_router_info ul.specification li{ padding-bottom: 5px; }
+.main_container .wifi_router_info ul.specification li p{ font-size: 15px; text-align: left; }
+.main_container .wifi_router_info ul.specification li .p_w{ font-weight: bold; }
+.main_container .wifi_router_info ul.specification li .c_gray{ color: #888; font-size: 12px; }
+
+.main_container .wifi_router_info ul.customer_service{ text-align: left; }
+.main_container .wifi_router_info ul.customer_service li{ display: inline-block; margin-right: 5px; }
+.main_container .wifi_router_info ul.customer_service li a{ color: #555; width: 70px; position: relative; height: 60px; text-align: center; display: block; font-size: 12px; border-radius: 5px; background-color: #fff; }
+.main_container .wifi_router_info ul.customer_service li a:hover{ box-shadow: 2px 3px 8px rgba(0,0,0,.2);}
+.main_container .wifi_router_info ul.customer_service li a::after{ content: ""; position: absolute; width: 100%; height: 30px; display: block; top: 5px; background-size: contain; background-repeat: no-repeat; background-position: center center}
+.main_container .wifi_router_info ul.customer_service li.telephone a::after{ height: 25px; top: 8px; background-image: url(../images/svg/telephone.svg) ; background-size: contain; background-repeat: no-repeat; background-position: center center}
+.main_container .wifi_router_info ul.customer_service li.messenger a::after{background-image: url(../images/svg/messenger.svg) ; background-size: contain; background-repeat: no-repeat; background-position: center center}
+.main_container .wifi_router_info ul.customer_service li.line a::after{background-image: url(../images/svg/line.svg) ; background-size: contain; background-repeat: no-repeat; background-position: center center}
+.main_container .wifi_router_info ul.customer_service li.wechat a::after{background-image: url(../images/svg/wechat.svg) ; background-size: contain; background-repeat: no-repeat; background-position: center center}
+
+.main_container .wifi_router_info ul.customer_service li a span{ width: 100%; text-align: center; position: absolute; left: 0; bottom: 0px; padding: 5px; }
+
+.main_container .plan_content ul.plan_list{ width: 100%; padding-top: 20px;}
+.main_container .plan_content ul.plan_list li{ float: left; width:25%; padding: 10px;}
+.main_container .plan_content ul.plan_list li .plan_info{ background-color: #fff; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; text-align: center; border-radius: 20px 20px 0 0; overflow: hidden;}
+.main_container .plan_content ul.plan_list li .plan_info:hover{ box-shadow: 2px 5px 12px rgba(0,0,0,.2); }
+.main_container .plan_content ul.plan_list li .plan_info .plan_info_top{ width: 100%; background-color: #f0a900; padding:15px 10px; }
+.main_container .plan_content ul.plan_list li .plan_info .plan_info_top h4.plan_title{ color: #fff; font-size: 20px;}
+.main_container .plan_content ul.plan_list li .plan_info .plan_info_top p.plan_price{ color: #fff; font-size: 36px; font-family:Arial, sans-serif;}
+.main_container .plan_content ul.plan_list li .plan_info .plan_info_top p.plan_price span{ font-size: 15px; top: -5px; font-size: 15px; position: relative; padding-right: 2px;}
+.main_container .plan_content ul.plan_list li .other_info{ padding: 15px 20px; min-height: 120px;}
+.main_container .plan_content ul.plan_list li .other_info p{ text-align: justify; font-size: 14px; color: #666; }
+
+.main_container .plan_content ul.plan_list li p.plan_order{ letter-spacing: 4px; font-size:15px; padding: 15px 0 20px 0;}
+.main_container .plan_content ul.plan_list li p.plan_order a{ color: #fff; background-color: #fabd00; padding:0 15px; width: calc(100% - 40px); display: inline-block; letter-spacing: 5px; text-align: center; color: #fff; line-height: 45px; text-shadow: 1px 2px 3px rgba(0,0,0,.2);}
+.main_container .plan_content ul.plan_list li p.plan_order a:hover{ opacity: .9;}
+
+.main_container .plan_content ul.plan_list li:nth-child(1) .plan_info .plan_info_top, .main_container .plan_content ul.plan_list li:nth-child(1) p.plan_order a{ background: rgb(255,87,34); background: -moz-linear-gradient(-45deg,  rgba(255,87,34,1) 2%, rgba(255,135,99,1) 100%); background: -webkit-linear-gradient(-45deg,  rgba(255,87,34,1) 2%,rgba(255,135,99,1) 100%); background: linear-gradient(135deg,  rgba(255,87,34,1) 2%,rgba(255,135,99,1) 100%); filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff5722', endColorstr='#ff8763',GradientType=1 ); }
+.main_container .plan_content ul.plan_list li:nth-child(2) .plan_info .plan_info_top, .main_container .plan_content ul.plan_list li:nth-child(2) p.plan_order a{ background: rgb(250,189,0); background: -moz-linear-gradient(-45deg,  rgba(250,189,0,1) 1%, rgba(247,213,111,1) 100%); background: -webkit-linear-gradient(-45deg,  rgba(250,189,0,1) 1%,rgba(247,213,111,1) 100%); background: linear-gradient(135deg,  rgba(250,189,0,1) 1%,rgba(247,213,111,1) 100%); filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fabd00', endColorstr='#f7d56f',GradientType=1 ); }
+.main_container .plan_content ul.plan_list li:nth-child(3) .plan_info .plan_info_top, .main_container .plan_content ul.plan_list li:nth-child(3) p.plan_order a{ background: rgb(87,156,209); background: -moz-linear-gradient(-45deg,  rgba(87,156,209,1) 1%, rgba(127,173,209,1) 100%); background: -webkit-linear-gradient(-45deg,  rgba(87,156,209,1) 1%,rgba(127,173,209,1) 100%); background: linear-gradient(135deg,  rgba(87,156,209,1) 1%,rgba(127,173,209,1) 100%); filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#579cd1', endColorstr='#7fadd1',GradientType=1 ); }
+.main_container .plan_content ul.plan_list li:nth-child(4) .plan_info .plan_info_top, .main_container .plan_content ul.plan_list li:nth-child(4) p.plan_order a{ background: rgb(197,189,114); background: -moz-linear-gradient(-45deg, rgba(197,189,114,1) 1%, rgba(234,201,124,1) 100%); background: -webkit-linear-gradient(-45deg, rgba(197,189,114,1) 1%,rgba(234,201,124,1) 100%); background: linear-gradient(135deg, rgba(197,189,114,1) 1%,rgba(234,201,124,1) 100%); filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c5bd72', endColorstr='#eac97c',GradientType=1 ); }
+.main_container .plan_content ul.plan_list li:nth-child(5) .plan_info .plan_info_top, .main_container .plan_content ul.plan_list li:nth-child(5) p.plan_order a{ background: rgb(174,86,189); background: -moz-linear-gradient(-45deg,  rgba(174,86,189,1) 2%, rgba(221,141,191,1) 100%); background: -webkit-linear-gradient(-45deg,  rgba(174,86,189,1) 2%,rgba(221,141,191,1) 100%); background: linear-gradient(135deg,  rgba(174,86,189,1) 2%,rgba(221,141,191,1) 100%); filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ae56bd', endColorstr='#dd8dbf',GradientType=1 ); }
+.main_container .plan_content ul.plan_list li:nth-child(6) .plan_info .plan_info_top, .main_container .plan_content ul.plan_list li:nth-child(6) p.plan_order a{ background: rgb(99,99,99); background: -moz-linear-gradient(-45deg,  rgba(99,99,99,1) 2%, rgba(150,150,150,1) 100%); background: -webkit-linear-gradient(-45deg,  rgba(99,99,99,1) 2%,rgba(150,150,150,1) 100%); background: linear-gradient(135deg,  rgba(99,99,99,1) 2%,rgba(150,150,150,1) 100%); filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#636363', endColorstr='#969696',GradientType=1 ); }
+
 .footer_info{ width: 100%; padding:25px 20px; background-color: #fff;}
 .footer_info p{ text-align: center; font-size: 14px; line-height: 28px; color: #333; }
 .footer_info p.link{ font-size: 13px; color: #ff9800;}
 .footer_info p.link a{ color: #ff9800; margin: 0 5px; }
 .footer_info p.link a:hover{ text-decoration: underline; }
 
+.QRcode_wechat{ background-color: #f8f2f2; width: 100%; height: 100vh !important; display:flex; align-items:center; justify-content:center; text-align: center;}
+.QRcode_wechat p{font-size: 13px; color: #888; line-height: 1.6em;}
+.QRcode_wechat p.title{ font-size: 18px;  color: #444; padding: 20px 0;}
+.QRcode_wechat .code{ width: 90%; max-width: 300px; margin: 0 auto;}
+.QRcode_wechat span{ color: #ff9800; }
+
+.loader{ width: 100%; height: 100vh; background-color: rgba(256,256,256,.9); position: fixed; z-index: 3; display: -webkit-flex; display: flex; -webkit-align-items: center; align-items: center; -webkit-justify-content: center; justify-content: center;}
+.loader .loader_circle { border: 8px solid #e2e2e2; border-radius: 50%; border-top: 8px solid #f5c021; width: 60px; height: 60px; -webkit-animation: spin 1.5s linear infinite; /* Safari */  animation: spin 1.5s linear infinite;}
+.loader p{ padding-left: 10px; }
+
+/* loader_circle animation */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 @media (max-width:1200px){
-	.main_container .area_content ul.area_list li{ width:33.33%;}
+	.main_container .area_content ul.area_list li, .main_container .plan_content ul.plan_list li{ width:33.33%;}
 	.main_container .area_content .area_menu ul.choose_country li{ min-width: 30%; }
 }
 @media (max-width:1000px){
 	.main_container .area_content ul.country_list li{ width:50%; padding: 10px;}
+	.main_container .wifi_router_info .img_wifi_router{ width: 250px; }
+	.main_container .wifi_router_info .other_item{ width: calc(100% - 250px);}
 }
 @media (max-width:800px){
 	.header_container{min-height: 50px;}
+	.header_container .header_nav ul li p.choose{ font-size: 13px; }
+	.header_container .header_nav ul li .sub_list p{font-size: 12px;}
 	.header_container .header_content{ padding: 0 20px; }
 	.header_container a.header_jetfi_logo{ width: 90px; margin: 0 auto;}
 	
@@ -95,7 +184,7 @@ body{ background-color: #f4f4f4;}
 	.main_container .area_content .area_menu ul.choose_area li p.btn_in a{ border-color: transparent; }
 	.main_container .area_content .area_menu ul.choose_country li{ min-width: 48%; }
 
-	.main_container .area_content ul.area_list li{ width:50%;}
+	.main_container .area_content ul.area_list li, .main_container .plan_content ul.plan_list li{ width:50%;}
 	.main_container .area_content ul.area_list li .area_info{ padding: 15px; text-align: center; }
 	.main_container .area_content ul.area_list li a{padding: 15px;}
 	.main_container .area_content ul.area_list li h3.area_title{font-size: 20px;}
@@ -104,10 +193,22 @@ body{ background-color: #f4f4f4;}
 	.main_container .main_flexslider .banner_title{ font-size: 30px; }
 	.main_container .main_flexslider, .main_container .main_flexslider ul.slides li{ height: 300px;}
 	
+	.main_container .plan_content{padding: 20px 0;}
+	.main_container .wifi_router_info .img_wifi_router { width: 100%; max-width: 200px; float: none; margin: 0 auto; padding-right: 0px;}
+	.main_container .wifi_router_info .other_item{ width: 100%; float: none; text-align: center; }
+	.main_container .wifi_router_info ul.customer_service{ text-align: center; }
 }
 @media (max-width:650px){
 	.main_container .area_content ul.area_list li a{ min-height: 220px;}
 	.main_container .area_content ul.area_list li .area_info{min-height: initial;}
+
+	
+	.main_container .plan_content ul.plan_list{ padding-top: 0;}
+	.main_container .plan_content ul.plan_list li{ width: 100%; padding: 10px; }
+	.main_container .plan_content ul.plan_list li .other_info{ min-height: inherit; }
+	.main_container .wifi_router_info{padding: 15px 0;}
+
+
 }
 @media (max-width:599px){
 	.main_container h3.top_title{ font-size: 21px; padding-bottom: 20px; }
