--- a/jetfi_wifi/css/style.css
+++ b/jetfi_wifi/css/style.css
@@ -28,13 +28,16 @@ select{ appearance:none; -moz-appearance:none; -webkit-appearance:none; -ms-appe
 /*===== start ======*/
 body{ background-color: #f4f4f4;}
 .header_container{ width: 100%; position: fixed; top: 0; left: 0; background-color: #fff; min-height: 65px; z-index: 2; border-bottom: 1px solid #e0e0e0; }
-.header_container .header_nav{ float: right; }
-.header_container .header_nav ul{ text-align: left; padding-top: 2px;}
+.header_container .header_nav{ float: right;}
+.header_container .header_nav ul{ text-align: left; padding-top: 9px;}
 .header_container .header_nav ul li{ display: inline-block; }
-.header_container .header_nav ul li a{position: relative; padding:15px 30px 15px 10px; display: block; cursor: pointer;}
-.header_container .header_nav ul li p.choose{ font-size:14px; position: relative; line-height: 20px;}
-.header_container .header_nav ul li p.choose::after{ content: ""; position: absolute; top:4px ; right: -24px; width: 20px; height: 9px; display: block; background: url("../images/svg/arrow-down-sign-to-navigate.svg") center center no-repeat; background-size: contain;} 
-.header_container .header_nav ul li:hover p.choose{ opacity: .7;}
+:root .header_container .header_nav .styled-select { width: \9\0; }
+:root .header_container .header_nav .styled-select::after{content: ""; position: absolute; top:0px ; right: 7px; width: 10px; height: 32px; display: block; background: url("../images/svg/arrow-down-sign-to-navigate.svg") center center no-repeat; background-size: contain; }
+:root .header_container .header_nav .styled-select select { width: 120% \9\0  !important; background: transparent\9\0 !important; }
+.header_container .header_nav .styled-select { min-height: 22px; position: relative;}
+.header_container .header_nav .styled-select::after{ content: ""; position: absolute; top:0px ; right: 7px; width: 10px; height: 32px; display: block; background: url("../images/svg/arrow-down-sign-to-navigate.svg") center center no-repeat; background-size: contain;} 
+.header_container .header_nav .styled-select select { width: 100%; padding: 4px 25px 4px 5px; min-height: 24px; line-height: 24px; *width: 120%; _width: 120%; background: transparent; text-align: center; font-size: 13px; border: 0; border-radius: 0; -webkit-appearance: none; }
+
 
 .header_container .header_nav ul li .sub_item{ position: absolute; display: none; top: 45px; right: 0; background-color: #fff; border-radius: 6px; min-width: 110px; box-shadow: 0 3px 10px rgba(0,0,0,.2);}
 .header_container .header_nav ul li .sub_list{ position: relative;}
@@ -88,6 +91,7 @@ body{ background-color: #f4f4f4;}
 
 .main_container .plan_content{ width:calc( 100% - 40px); max-width: 1200px; padding: 40px 0; margin: 0 auto; }
 .main_container .plan_content h3{ padding-bottom: 15px; }
+
 .main_container .wifi_router_info{ width: 100%; max-width: 800px; margin: 0 auto; padding: 30px 0;}
 .main_container .wifi_router_info .img_wifi_router{ float: left; width:300px; padding-right: 40px; }
 .main_container .wifi_router_info .img_wifi_router img{ width: 100%; border-radius: 50%; box-shadow: 0 3px 8px rgba(0,0,0,0.1); }
@@ -103,11 +107,11 @@ body{ background-color: #f4f4f4;}
 .main_container .wifi_router_info ul.customer_service li{ display: inline-block; margin-right: 5px; }
 .main_container .wifi_router_info ul.customer_service li a{ color: #555; width: 70px; position: relative; height: 60px; text-align: center; display: block; font-size: 12px; border-radius: 5px; background-color: #fff; }
 .main_container .wifi_router_info ul.customer_service li a:hover{ box-shadow: 2px 3px 8px rgba(0,0,0,.2);}
-.main_container .wifi_router_info ul.customer_service li a::after{ content: ""; position: absolute; width: 100%; height: 30px; display: block; top: 5px; background-size: contain; background-repeat: no-repeat; background-position: center center}
-.main_container .wifi_router_info ul.customer_service li.telephone a::after{ height: 25px; top: 8px; background-image: url(../images/svg/telephone.svg) ; background-size: contain; background-repeat: no-repeat; background-position: center center}
-.main_container .wifi_router_info ul.customer_service li.messenger a::after{background-image: url(../images/svg/messenger.svg) ; background-size: contain; background-repeat: no-repeat; background-position: center center}
-.main_container .wifi_router_info ul.customer_service li.line a::after{background-image: url(../images/svg/line.svg) ; background-size: contain; background-repeat: no-repeat; background-position: center center}
-.main_container .wifi_router_info ul.customer_service li.wechat a::after{background-image: url(../images/svg/wechat.svg) ; background-size: contain; background-repeat: no-repeat; background-position: center center}
+.main_container .wifi_router_info ul.customer_service li a::after{ content: ""; position: absolute; width: 100%; height: 30px; display: block; top: 5px; background-size: contain; background-repeat: no-repeat; background-position: center center;}
+.main_container .wifi_router_info ul.customer_service li.telephone a::after{ height: 25px; top: 8px; background-image: url(../images/svg/telephone.svg) ; background-size: contain; background-repeat: no-repeat; background-position: center center;}
+.main_container .wifi_router_info ul.customer_service li.messenger a::after{background-image: url(../images/svg/messenger.svg) ; background-size: contain; background-repeat: no-repeat; background-position: center center;}
+.main_container .wifi_router_info ul.customer_service li.line a::after{background-image: url(../images/svg/line.svg) ; background-size: contain; background-repeat: no-repeat; background-position: center center;}
+.main_container .wifi_router_info ul.customer_service li.wechat a::after{background-image: url(../images/svg/wechat.svg) ; background-size: contain; background-repeat: no-repeat; background-position: center center;}
 
 .main_container .wifi_router_info ul.customer_service li a span{ width: 100%; text-align: center; position: absolute; left: 0; bottom: 0px; padding: 5px; }
 
@@ -132,6 +136,22 @@ body{ background-color: #f4f4f4;}
 .main_container .plan_content ul.plan_list li:nth-child(4) .plan_info .plan_info_top, .main_container .plan_content ul.plan_list li:nth-child(4) p.plan_order a{ background: rgb(197,189,114); background: -moz-linear-gradient(-45deg, rgba(197,189,114,1) 1%, rgba(234,201,124,1) 100%); background: -webkit-linear-gradient(-45deg, rgba(197,189,114,1) 1%,rgba(234,201,124,1) 100%); background: linear-gradient(135deg, rgba(197,189,114,1) 1%,rgba(234,201,124,1) 100%); filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c5bd72', endColorstr='#eac97c',GradientType=1 ); }
 .main_container .plan_content ul.plan_list li:nth-child(5) .plan_info .plan_info_top, .main_container .plan_content ul.plan_list li:nth-child(5) p.plan_order a{ background: rgb(174,86,189); background: -moz-linear-gradient(-45deg,  rgba(174,86,189,1) 2%, rgba(221,141,191,1) 100%); background: -webkit-linear-gradient(-45deg,  rgba(174,86,189,1) 2%,rgba(221,141,191,1) 100%); background: linear-gradient(135deg,  rgba(174,86,189,1) 2%,rgba(221,141,191,1) 100%); filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ae56bd', endColorstr='#dd8dbf',GradientType=1 ); }
 .main_container .plan_content ul.plan_list li:nth-child(6) .plan_info .plan_info_top, .main_container .plan_content ul.plan_list li:nth-child(6) p.plan_order a{ background: rgb(99,99,99); background: -moz-linear-gradient(-45deg,  rgba(99,99,99,1) 2%, rgba(150,150,150,1) 100%); background: -webkit-linear-gradient(-45deg,  rgba(99,99,99,1) 2%,rgba(150,150,150,1) 100%); background: linear-gradient(135deg,  rgba(99,99,99,1) 2%,rgba(150,150,150,1) 100%); filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#636363', endColorstr='#969696',GradientType=1 ); }
+
+.main_container .plan_content ul.plan_list_row{ width: 100%; max-width: 800px; margin: 0 auto; padding: 20px 0;}
+.main_container .plan_content ul.plan_list_row li { padding-bottom: 15px;}
+.main_container .plan_content ul.plan_list_row li .plan_info{ background-color: #fff; border-radius: 10px; padding: 15px 20px; display: flex; align-items:center; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;}
+.main_container .plan_content ul.plan_list_row li .plan_info:hover{ box-shadow: 2px 3px 8px rgba(0,0,0,.2);}
+.main_container .plan_content ul.plan_list_row li .plan_info .left_content{ width: calc(100% - 120px); padding-right: 20px; display: flex; align-items:center; }
+.main_container .plan_content ul.plan_list_row li .plan_info h4.plan_title{ line-height: 24px; padding:0px 5px 0px 25px; font-weight: bold; font-size: 20px; width: calc(100% - 100px); }
+
+.main_container .plan_content ul.plan_list_row li .plan_info p.plan_price{ color: #555; min-width: 100px; text-align: right; }
+.main_container .plan_content ul.plan_list_row li .plan_info p.plan_price span{ font-weight: bold; font-size: 24px; color: #ff9800;}
+.main_container .plan_content ul.plan_list_row li .plan_info p.plan_price span.p_s{ font-size: 13px; position: relative; top: -4px; }
+
+.main_container .plan_content ul.plan_list_row li .plan_info .plan_order{ font-size: 14px; }
+.main_container .plan_content ul.plan_list_row li .plan_info .plan_order a{ color: #333; border:1.5px solid #666; border-radius: 6px; min-width: 120px; padding:10px 8px; display: inline-block; text-align: center; line-height: 20px; }
+.main_container .plan_content ul.plan_list_row li .plan_info .plan_order a:hover{ color: #fff; background-color: #fabd00; border-color: #fabd00;}
+
 
 .footer_info{ width: 100%; padding:25px 20px; background-color: #fff;}
 .footer_info p{ text-align: center; font-size: 14px; line-height: 28px; color: #333; }
@@ -168,6 +188,8 @@ body{ background-color: #f4f4f4;}
 	.main_container .area_content ul.country_list li{ width:50%; padding: 10px;}
 	.main_container .wifi_router_info .img_wifi_router{ width: 250px; }
 	.main_container .wifi_router_info .other_item{ width: calc(100% - 250px);}
+	.main_container .plan_content ul.plan_list_row li .plan_info h4.plan_title{ font-size: 18px; }
+	.main_container .plan_content ul.plan_list_row li .plan_info p.plan_price span{ font-size: 22px; }
 }
 @media (max-width:800px){
 	.header_container{min-height: 50px;}
@@ -197,21 +219,26 @@ body{ background-color: #f4f4f4;}
 	.main_container .wifi_router_info .img_wifi_router { width: 100%; max-width: 200px; float: none; margin: 0 auto; padding-right: 0px;}
 	.main_container .wifi_router_info .other_item{ width: 100%; float: none; text-align: center; }
 	.main_container .wifi_router_info ul.customer_service{ text-align: center; }
+	.main_container .plan_content ul.plan_list_row li .plan_info h4.plan_title{ font-size: 16px; padding-left: 20px; width: calc(100% - 80px);}
+	.main_container .plan_content ul.plan_list_row li .plan_info p.plan_price{ min-width: 80px;}
+	.main_container .plan_content ul.plan_list_row li .plan_info p.plan_price span{ font-size: 20px; }
+	.main_container .plan_content ul.plan_list_row li .plan_info p.plan_price span.p_s{ top: -2px;}
+	.main_container .plan_content ul.plan_list_row li .plan_info .left_content{ width: 100%;}
+	.main_container .plan_content ul.plan_list_row li .plan_info .plan_order a{ min-width: 85px;}
 }
 @media (max-width:650px){
 	.main_container .area_content ul.area_list li a{ min-height: 220px;}
 	.main_container .area_content ul.area_list li .area_info{min-height: initial;}
 
-	
 	.main_container .plan_content ul.plan_list{ padding-top: 0;}
 	.main_container .plan_content ul.plan_list li{ width: 100%; padding: 10px; }
 	.main_container .plan_content ul.plan_list li .other_info{ min-height: inherit; }
 	.main_container .wifi_router_info{padding: 15px 0;}
 
-
+    .main_container .plan_content ul.plan_list_row li .plan_info{  padding: 10px;}
 }
 @media (max-width:599px){
-	.main_container h3.top_title{ font-size: 21px; padding-bottom: 20px; }
+	.main_container h3.top_title{ font-size: 20px; padding-bottom: 20px; }
 	.main_container .area_content ul.area_list li a{ min-height: 175px;}
 	.main_container .area_content ul.area_list li p.more{ line-height: 36px; letter-spacing: 3px; }
 	.main_container .area_content ul.area_list li h3.area_title, .main_container .area_content ul.area_list li h4.area_sub_title{ padding: 5px 0;}
@@ -219,17 +246,30 @@ body{ background-color: #f4f4f4;}
 	.main_container .area_content ul.choose_area li p{ font-size: 16px; }
 	.main_container .main_flexslider .banner_title{ font-size: 24px; }
 	.main_container .main_flexslider, .main_container .main_flexslider ul.slides li{ height: 240px;}
-	.footer_info p{ font-size: 12px; }
+
+	.main_container .wifi_router_info ul.specification li p{ font-size: 14px; }
+	.main_container .plan_content ul.plan_list_row{ padding:15px 0 0 0;}
+	.main_container .plan_content ul.plan_list_row li .plan_info .left_content{ padding-right: 10px; }
+	.main_container .plan_content ul.plan_list_row li .plan_info h4.plan_title{ font-size: 14px; padding-left: 15px; line-height: 20px; }
+	.main_container .plan_content ul.plan_list_row li .plan_info p.plan_price{ font-size: 13px; }
+	.main_container .plan_content ul.plan_list_row li .plan_info p.plan_price span{ font-size: 17px; }
+	.main_container .plan_content ul.plan_list_row li .plan_info p.plan_price span.p_s{top: -1px;}
+	.main_container .plan_content ul.plan_list_row li .plan_info .plan_order{ font-size: 12px; }
+	.main_container .plan_content ul.plan_list_row li .plan_info .plan_order a{padding: 6px; min-width: 80px;}
+	.footer_info p, .header_container .header_nav .styled-select select { font-size: 12px; }
 }
 @media (max-width:400px){
-	.main_container h3.top_title{ font-size: 18px; padding-bottom: 20px; }
+	.main_container h3.top_title{ font-size: 17px; padding-bottom: 5px; }
 	.main_container .area_content ul.area_list li p.more{ font-size: 14px; line-height: 32px;}
 	.main_container .area_content ul.area_list li h4.area_sub_title{ font-size: 14px; }
 	.main_container .area_content ul.area_list li h3.area_title, .main_container .area_content ul.area_list li h4.area_sub_title{ padding: 2.5px 0; }
 	.main_container .area_content ul.choose_area li{ padding: 0 6px; }
 	.main_container .area_content ul.choose_area li p a{ padding-bottom: 2px;}
+	.main_container .plan_content ul.plan_list_row li .plan_info p.plan_price span{ font-size: 16px; }
+	.footer_info{ padding: 15px 20px; }
+	.footer_info p, .footer_info p.link{ font-size: 11px; line-height: 20px; }
 }
-@media (max-width:320px){
+@media (max-width:350px){
 	.footer_info p{ font-size: 11px; line-height: 20px; }
 	.header_container a.header_jetfi_logo{ width: 75px; height: 45px; }
 	.main_container .area_content{ padding: 10px 0; }
@@ -239,4 +279,14 @@ body{ background-color: #f4f4f4;}
 	.main_container .area_content ul.area_list li h3.area_title{ font-size: 17px; }
 	.main_container .area_content ul.area_list li h4.area_sub_title{ font-size: 13px; }
 	.main_container .area_content ul.choose_area li p{ font-size: 14px; }
+
+	.main_container .wifi_router_info ul.specification li p{ font-size: 13px; }
+
+	.main_container .plan_content ul.plan_list_row li .plan_info .left_content{ display: initial;}
+	.main_container .plan_content ul.plan_list_row li .plan_info{ padding: 8px 6px; }
+	.main_container .plan_content ul.plan_list_row li .plan_info h4.plan_title{ font-size: 13px; line-height: 18px; width:100%;}
+	.main_container .plan_content ul.plan_list_row li .plan_info p.plan_price{ min-width:inherit; font-size: 12px; text-align: left; padding-left: 15px;}
+	.main_container .plan_content ul.plan_list_row li .plan_info p.plan_price span{ font-size: 15px; }
+	.main_container .plan_content ul.plan_list_row li .plan_info .plan_order{ font-size: 11px; }
+	.main_container .plan_content ul.plan_list_row li .plan_info .plan_order a{ min-width: 75px; padding: 4px;}
 }
